<resources>
    <string name="app_name">Lab3</string>
    <string name="title">中山大学学生信息系统</string>
    <string name="avatar_des">用户头像</string>
    <string name="sid_label">学号：</string>
    <string name="sid_hint">请输入学号</string>
    <string name="pwd_label">密码：</string>
    <string name="pwd_hint">请输入密码</string>
    <string name="role1">学生</string>
    <string name="role2">教职工</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
</resources>
